# ice-dev-tools

./: README.md  pyproject.toml
src/ice_devtools/core/: config.py  exceptions.py  types.py
src/ice_devtools/detection/: base.py  date_parser.py  detector.py  multiline.py  patterns.py
src/ice_devtools/formatting/: color.py  exporter.py
src/ice_devtools/generation/: generate_cv.py
src/ice_devtools/parsing/: normalizer.py  processor.py  reader.py
