[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ice-devtools"
version = "0.1.0"
description = "Developer tools and utilities for parsing, detecting, normalizing and exporting structured data (ICE ecosystem)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Francesco Maiomascio" }
]

requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "rich>=13.0",
    "markdown2>=2.4",
    "reportlab>=4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
